Checkpoints/Checkpt#6/y.output
Terminals which are not used

   CARRIAGERETURN
   EXIT
   IF
   ELSE
   WHILE
   TO
   COUNTING
   UPWARD
   DOWNWARD
   READ
   PRINT
   STRING


Grammar

    0 $accept: program $end

    1 program: MAIN SEMICOLON data algorithm END MAIN SEMICOLON

    2 data: DATA COLON fulldeclaration
    3     | DATA COLON

    4 fulldeclaration: declaration
    5                | declaration fulldeclaration

    6 declaration: datatype COLON varlist SEMICOLON

    7 datatype: REAL
    8         | INTEGER

    9 varlist: item
   10        | item COMMA varlist
   11        | /* empty */

   12 item: VARIABLE
   13     | VARIABLE LBRACKET INTCONSTANT RBRACKET

   14 algorithm: ALGORITHM COLON body

   15 body: statement body
   16     | /* empty */

   17 statement: assignment

   18 assignment: variable ASSIGN fullexpression SEMICOLON

   19 fullexpression: comparison
   20               | NOT fullexpression
   21               | comparison AND fullexpression
   22               | comparison OR fullexpression

   23 comparison: expression
   24           | comparison LESSTHAN expression
   25           | comparison GREATERTHAN expression
   26           | comparison LESSOREQUAL expression
   27           | comparison GREATEROREQUAL expression
   28           | comparison EQUAL expression
   29           | comparison NOTEQUAL expression

   30 expression: term
   31           | expression ADDITION term
   32           | expression SUBTRACTION term

   33 term: factor
   34     | term MULTIPLICATION factor
   35     | term DIVISION factor
   36     | term MODULUS factor

   37 factor: atom
   38       | LPARENTH expression RPARENTH
   39       | SUBTRACTION factor

   40 atom: variable
   41     | INTCONSTANT
   42     | REALCONSTANT

   43 variable: VARIABLE
   44         | VARIABLE LBRACKET fullexpression RBRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
ADDITION (258) 31
SUBTRACTION (259) 32 39
MULTIPLICATION (260) 34
DIVISION (261) 35
MODULUS (262) 36
LESSTHAN (263) 24
GREATERTHAN (264) 25
LESSOREQUAL (265) 26
GREATEROREQUAL (266) 27
EQUAL (267) 28
NOTEQUAL (268) 29
AND (269) 21
OR (270) 22
NOT (271) 20
LPARENTH (272) 38
RPARENTH (273) 38
LBRACKET (274) 13 44
RBRACKET (275) 13 44
SEMICOLON (276) 1 6 18
COLON (277) 2 3 6 14
COMMA (278) 10
ASSIGN (279) 18
CARRIAGERETURN (280)
MAIN (281) 1
END (282) 1
EXIT (283)
IF (284)
ELSE (285)
WHILE (286)
TO (287)
COUNTING (288)
UPWARD (289)
DOWNWARD (290)
REAL (291) 7
INTEGER (292) 8
DATA (293) 2 3
ALGORITHM (294) 14
READ (295)
PRINT (296)
VARIABLE (297) 12 13 43 44
STRING (298)
INTCONSTANT (299) 13 41
REALCONSTANT (300) 42


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
data (48)
    on left: 2 3, on right: 1
fulldeclaration (49)
    on left: 4 5, on right: 2 5
declaration (50)
    on left: 6, on right: 4 5
datatype (51)
    on left: 7 8, on right: 6
varlist (52)
    on left: 9 10 11, on right: 6 10
item (53)
    on left: 12 13, on right: 9 10
algorithm (54)
    on left: 14, on right: 1
body (55)
    on left: 15 16, on right: 14 15
statement (56)
    on left: 17, on right: 15
assignment (57)
    on left: 18, on right: 17
fullexpression (58)
    on left: 19 20 21 22, on right: 18 20 21 22 44
comparison (59)
    on left: 23 24 25 26 27 28 29, on right: 19 21 22 24 25 26 27 28
    29
expression (60)
    on left: 30 31 32, on right: 23 24 25 26 27 28 29 31 32 38
term (61)
    on left: 33 34 35 36, on right: 30 31 32 34 35 36
factor (62)
    on left: 37 38 39, on right: 33 34 35 36 39
atom (63)
    on left: 40 41 42, on right: 37
variable (64)
    on left: 43 44, on right: 18 40


state 0

    0 $accept: . program $end

    MAIN  shift, and go to state 1

    program  go to state 2


state 1

    1 program: MAIN . SEMICOLON data algorithm END MAIN SEMICOLON

    SEMICOLON  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: MAIN SEMICOLON . data algorithm END MAIN SEMICOLON

    DATA  shift, and go to state 5

    data  go to state 6


state 4

    0 $accept: program $end .

    $default  accept


state 5

    2 data: DATA . COLON fulldeclaration
    3     | DATA . COLON

    COLON  shift, and go to state 7


state 6

    1 program: MAIN SEMICOLON data . algorithm END MAIN SEMICOLON

    ALGORITHM  shift, and go to state 8

    algorithm  go to state 9


state 7

    2 data: DATA COLON . fulldeclaration
    3     | DATA COLON .

    REAL     shift, and go to state 10
    INTEGER  shift, and go to state 11

    $default  reduce using rule 3 (data)

    fulldeclaration  go to state 12
    declaration      go to state 13
    datatype         go to state 14


state 8

   14 algorithm: ALGORITHM . COLON body

    COLON  shift, and go to state 15


state 9

    1 program: MAIN SEMICOLON data algorithm . END MAIN SEMICOLON

    END  shift, and go to state 16


state 10

    7 datatype: REAL .

    $default  reduce using rule 7 (datatype)


state 11

    8 datatype: INTEGER .

    $default  reduce using rule 8 (datatype)


state 12

    2 data: DATA COLON fulldeclaration .

    $default  reduce using rule 2 (data)


state 13

    4 fulldeclaration: declaration .
    5                | declaration . fulldeclaration

    REAL     shift, and go to state 10
    INTEGER  shift, and go to state 11

    $default  reduce using rule 4 (fulldeclaration)

    fulldeclaration  go to state 17
    declaration      go to state 13
    datatype         go to state 14


state 14

    6 declaration: datatype . COLON varlist SEMICOLON

    COLON  shift, and go to state 18


state 15

   14 algorithm: ALGORITHM COLON . body

    VARIABLE  shift, and go to state 19

    $default  reduce using rule 16 (body)

    body        go to state 20
    statement   go to state 21
    assignment  go to state 22
    variable    go to state 23


state 16

    1 program: MAIN SEMICOLON data algorithm END . MAIN SEMICOLON

    MAIN  shift, and go to state 24


state 17

    5 fulldeclaration: declaration fulldeclaration .

    $default  reduce using rule 5 (fulldeclaration)


state 18

    6 declaration: datatype COLON . varlist SEMICOLON

    VARIABLE  shift, and go to state 25

    $default  reduce using rule 11 (varlist)

    varlist  go to state 26
    item     go to state 27


state 19

   43 variable: VARIABLE .
   44         | VARIABLE . LBRACKET fullexpression RBRACKET

    LBRACKET  shift, and go to state 28

    $default  reduce using rule 43 (variable)


state 20

   14 algorithm: ALGORITHM COLON body .

    $default  reduce using rule 14 (algorithm)


state 21

   15 body: statement . body

    VARIABLE  shift, and go to state 19

    $default  reduce using rule 16 (body)

    body        go to state 29
    statement   go to state 21
    assignment  go to state 22
    variable    go to state 23


state 22

   17 statement: assignment .

    $default  reduce using rule 17 (statement)


state 23

   18 assignment: variable . ASSIGN fullexpression SEMICOLON

    ASSIGN  shift, and go to state 30


state 24

    1 program: MAIN SEMICOLON data algorithm END MAIN . SEMICOLON

    SEMICOLON  shift, and go to state 31


state 25

   12 item: VARIABLE .
   13     | VARIABLE . LBRACKET INTCONSTANT RBRACKET

    LBRACKET  shift, and go to state 32

    $default  reduce using rule 12 (item)


state 26

    6 declaration: datatype COLON varlist . SEMICOLON

    SEMICOLON  shift, and go to state 33


state 27

    9 varlist: item .
   10        | item . COMMA varlist

    COMMA  shift, and go to state 34

    $default  reduce using rule 9 (varlist)


state 28

   44 variable: VARIABLE LBRACKET . fullexpression RBRACKET

    SUBTRACTION   shift, and go to state 35
    NOT           shift, and go to state 36
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    fullexpression  go to state 40
    comparison      go to state 41
    expression      go to state 42
    term            go to state 43
    factor          go to state 44
    atom            go to state 45
    variable        go to state 46


state 29

   15 body: statement body .

    $default  reduce using rule 15 (body)


state 30

   18 assignment: variable ASSIGN . fullexpression SEMICOLON

    SUBTRACTION   shift, and go to state 35
    NOT           shift, and go to state 36
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    fullexpression  go to state 47
    comparison      go to state 41
    expression      go to state 42
    term            go to state 43
    factor          go to state 44
    atom            go to state 45
    variable        go to state 46


state 31

    1 program: MAIN SEMICOLON data algorithm END MAIN SEMICOLON .

    $default  reduce using rule 1 (program)


state 32

   13 item: VARIABLE LBRACKET . INTCONSTANT RBRACKET

    INTCONSTANT  shift, and go to state 48


state 33

    6 declaration: datatype COLON varlist SEMICOLON .

    $default  reduce using rule 6 (declaration)


state 34

   10 varlist: item COMMA . varlist

    VARIABLE  shift, and go to state 25

    $default  reduce using rule 11 (varlist)

    varlist  go to state 49
    item     go to state 27


state 35

   39 factor: SUBTRACTION . factor

    SUBTRACTION   shift, and go to state 35
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    factor    go to state 50
    atom      go to state 45
    variable  go to state 46


state 36

   20 fullexpression: NOT . fullexpression

    SUBTRACTION   shift, and go to state 35
    NOT           shift, and go to state 36
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    fullexpression  go to state 51
    comparison      go to state 41
    expression      go to state 42
    term            go to state 43
    factor          go to state 44
    atom            go to state 45
    variable        go to state 46


state 37

   38 factor: LPARENTH . expression RPARENTH

    SUBTRACTION   shift, and go to state 35
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    expression  go to state 52
    term        go to state 43
    factor      go to state 44
    atom        go to state 45
    variable    go to state 46


state 38

   41 atom: INTCONSTANT .

    $default  reduce using rule 41 (atom)


state 39

   42 atom: REALCONSTANT .

    $default  reduce using rule 42 (atom)


state 40

   44 variable: VARIABLE LBRACKET fullexpression . RBRACKET

    RBRACKET  shift, and go to state 53


state 41

   19 fullexpression: comparison .
   21               | comparison . AND fullexpression
   22               | comparison . OR fullexpression
   24 comparison: comparison . LESSTHAN expression
   25           | comparison . GREATERTHAN expression
   26           | comparison . LESSOREQUAL expression
   27           | comparison . GREATEROREQUAL expression
   28           | comparison . EQUAL expression
   29           | comparison . NOTEQUAL expression

    LESSTHAN        shift, and go to state 54
    GREATERTHAN     shift, and go to state 55
    LESSOREQUAL     shift, and go to state 56
    GREATEROREQUAL  shift, and go to state 57
    EQUAL           shift, and go to state 58
    NOTEQUAL        shift, and go to state 59
    AND             shift, and go to state 60
    OR              shift, and go to state 61

    $default  reduce using rule 19 (fullexpression)


state 42

   23 comparison: expression .
   31 expression: expression . ADDITION term
   32           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 62
    SUBTRACTION  shift, and go to state 63

    $default  reduce using rule 23 (comparison)


state 43

   30 expression: term .
   34 term: term . MULTIPLICATION factor
   35     | term . DIVISION factor
   36     | term . MODULUS factor

    MULTIPLICATION  shift, and go to state 64
    DIVISION        shift, and go to state 65
    MODULUS         shift, and go to state 66

    $default  reduce using rule 30 (expression)


state 44

   33 term: factor .

    $default  reduce using rule 33 (term)


state 45

   37 factor: atom .

    $default  reduce using rule 37 (factor)


state 46

   40 atom: variable .

    $default  reduce using rule 40 (atom)


state 47

   18 assignment: variable ASSIGN fullexpression . SEMICOLON

    SEMICOLON  shift, and go to state 67


state 48

   13 item: VARIABLE LBRACKET INTCONSTANT . RBRACKET

    RBRACKET  shift, and go to state 68


state 49

   10 varlist: item COMMA varlist .

    $default  reduce using rule 10 (varlist)


state 50

   39 factor: SUBTRACTION factor .

    $default  reduce using rule 39 (factor)


state 51

   20 fullexpression: NOT fullexpression .

    $default  reduce using rule 20 (fullexpression)


state 52

   31 expression: expression . ADDITION term
   32           | expression . SUBTRACTION term
   38 factor: LPARENTH expression . RPARENTH

    ADDITION     shift, and go to state 62
    SUBTRACTION  shift, and go to state 63
    RPARENTH     shift, and go to state 69


state 53

   44 variable: VARIABLE LBRACKET fullexpression RBRACKET .

    $default  reduce using rule 44 (variable)


state 54

   24 comparison: comparison LESSTHAN . expression

    SUBTRACTION   shift, and go to state 35
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    expression  go to state 70
    term        go to state 43
    factor      go to state 44
    atom        go to state 45
    variable    go to state 46


state 55

   25 comparison: comparison GREATERTHAN . expression

    SUBTRACTION   shift, and go to state 35
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    expression  go to state 71
    term        go to state 43
    factor      go to state 44
    atom        go to state 45
    variable    go to state 46


state 56

   26 comparison: comparison LESSOREQUAL . expression

    SUBTRACTION   shift, and go to state 35
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    expression  go to state 72
    term        go to state 43
    factor      go to state 44
    atom        go to state 45
    variable    go to state 46


state 57

   27 comparison: comparison GREATEROREQUAL . expression

    SUBTRACTION   shift, and go to state 35
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    expression  go to state 73
    term        go to state 43
    factor      go to state 44
    atom        go to state 45
    variable    go to state 46


state 58

   28 comparison: comparison EQUAL . expression

    SUBTRACTION   shift, and go to state 35
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    expression  go to state 74
    term        go to state 43
    factor      go to state 44
    atom        go to state 45
    variable    go to state 46


state 59

   29 comparison: comparison NOTEQUAL . expression

    SUBTRACTION   shift, and go to state 35
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    expression  go to state 75
    term        go to state 43
    factor      go to state 44
    atom        go to state 45
    variable    go to state 46


state 60

   21 fullexpression: comparison AND . fullexpression

    SUBTRACTION   shift, and go to state 35
    NOT           shift, and go to state 36
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    fullexpression  go to state 76
    comparison      go to state 41
    expression      go to state 42
    term            go to state 43
    factor          go to state 44
    atom            go to state 45
    variable        go to state 46


state 61

   22 fullexpression: comparison OR . fullexpression

    SUBTRACTION   shift, and go to state 35
    NOT           shift, and go to state 36
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    fullexpression  go to state 77
    comparison      go to state 41
    expression      go to state 42
    term            go to state 43
    factor          go to state 44
    atom            go to state 45
    variable        go to state 46


state 62

   31 expression: expression ADDITION . term

    SUBTRACTION   shift, and go to state 35
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    term      go to state 78
    factor    go to state 44
    atom      go to state 45
    variable  go to state 46


state 63

   32 expression: expression SUBTRACTION . term

    SUBTRACTION   shift, and go to state 35
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    term      go to state 79
    factor    go to state 44
    atom      go to state 45
    variable  go to state 46


state 64

   34 term: term MULTIPLICATION . factor

    SUBTRACTION   shift, and go to state 35
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    factor    go to state 80
    atom      go to state 45
    variable  go to state 46


state 65

   35 term: term DIVISION . factor

    SUBTRACTION   shift, and go to state 35
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    factor    go to state 81
    atom      go to state 45
    variable  go to state 46


state 66

   36 term: term MODULUS . factor

    SUBTRACTION   shift, and go to state 35
    LPARENTH      shift, and go to state 37
    VARIABLE      shift, and go to state 19
    INTCONSTANT   shift, and go to state 38
    REALCONSTANT  shift, and go to state 39

    factor    go to state 82
    atom      go to state 45
    variable  go to state 46


state 67

   18 assignment: variable ASSIGN fullexpression SEMICOLON .

    $default  reduce using rule 18 (assignment)


state 68

   13 item: VARIABLE LBRACKET INTCONSTANT RBRACKET .

    $default  reduce using rule 13 (item)


state 69

   38 factor: LPARENTH expression RPARENTH .

    $default  reduce using rule 38 (factor)


state 70

   24 comparison: comparison LESSTHAN expression .
   31 expression: expression . ADDITION term
   32           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 62
    SUBTRACTION  shift, and go to state 63

    $default  reduce using rule 24 (comparison)


state 71

   25 comparison: comparison GREATERTHAN expression .
   31 expression: expression . ADDITION term
   32           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 62
    SUBTRACTION  shift, and go to state 63

    $default  reduce using rule 25 (comparison)


state 72

   26 comparison: comparison LESSOREQUAL expression .
   31 expression: expression . ADDITION term
   32           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 62
    SUBTRACTION  shift, and go to state 63

    $default  reduce using rule 26 (comparison)


state 73

   27 comparison: comparison GREATEROREQUAL expression .
   31 expression: expression . ADDITION term
   32           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 62
    SUBTRACTION  shift, and go to state 63

    $default  reduce using rule 27 (comparison)


state 74

   28 comparison: comparison EQUAL expression .
   31 expression: expression . ADDITION term
   32           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 62
    SUBTRACTION  shift, and go to state 63

    $default  reduce using rule 28 (comparison)


state 75

   29 comparison: comparison NOTEQUAL expression .
   31 expression: expression . ADDITION term
   32           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 62
    SUBTRACTION  shift, and go to state 63

    $default  reduce using rule 29 (comparison)


state 76

   21 fullexpression: comparison AND fullexpression .

    $default  reduce using rule 21 (fullexpression)


state 77

   22 fullexpression: comparison OR fullexpression .

    $default  reduce using rule 22 (fullexpression)


state 78

   31 expression: expression ADDITION term .
   34 term: term . MULTIPLICATION factor
   35     | term . DIVISION factor
   36     | term . MODULUS factor

    MULTIPLICATION  shift, and go to state 64
    DIVISION        shift, and go to state 65
    MODULUS         shift, and go to state 66

    $default  reduce using rule 31 (expression)


state 79

   32 expression: expression SUBTRACTION term .
   34 term: term . MULTIPLICATION factor
   35     | term . DIVISION factor
   36     | term . MODULUS factor

    MULTIPLICATION  shift, and go to state 64
    DIVISION        shift, and go to state 65
    MODULUS         shift, and go to state 66

    $default  reduce using rule 32 (expression)


state 80

   34 term: term MULTIPLICATION factor .

    $default  reduce using rule 34 (term)


state 81

   35 term: term DIVISION factor .

    $default  reduce using rule 35 (term)


state 82

   36 term: term MODULUS factor .

    $default  reduce using rule 36 (term)
